# task-queue-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: config.json
docker/: Dockerfile  docker-compose.yml
include/: CLIDashboard.hpp  CircuitBreaker.hpp  Config.hpp  FifoScheduler.hpp  HealthChecker.hpp  IObserver.hpp  IScheduler.hpp  Monitor.hpp  PriorityScheduler.hpp  RoundRobinScheduler.hpp  SchedulerFactory.hpp  Task.hpp  TaskBroker.hpp  TaskResult.hpp  Worker.hpp  WorkerPool.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_broker.cpp  test_circuit_breaker.cpp  test_scheduler.cpp  test_worker_pool.cpp
